[gd_scene load_steps=19 format=3 uid="uid://cxmei1ghmvqt4"]

[ext_resource type="Script" uid="uid://nghbwcwgjwdd" path="res://Game/Shared/hud_platform.gd" id="1_d4l7n"]
[ext_resource type="Texture2D" uid="uid://dhdj1w4koftxx" path="res://Game/Shared/hud/icon_magic_freeze.png" id="1_w0yga"]
[ext_resource type="Texture2D" uid="uid://jerhxd5rsblp" path="res://Game/Shared/hud/icon_magic_fire.png" id="2_vrta5"]
[ext_resource type="Texture2D" uid="uid://5grfejh462ap" path="res://Game/Shared/hud/icon_magic_stick.png" id="4_eghrs"]
[ext_resource type="PackedScene" uid="uid://4du01hwt5k1d" path="res://Game/Shared/hud/animated_sprite_button.tscn" id="5_v6rmk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fd14h"]
atlas = ExtResource("4_eghrs")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiltm"]
atlas = ExtResource("4_eghrs")
region = Rect2(12, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_aadpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiltm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1d87u"]
atlas = ExtResource("1_w0yga")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy1ur"]
atlas = ExtResource("1_w0yga")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dhbl"]
atlas = ExtResource("1_w0yga")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_66dsp"]
atlas = ExtResource("1_w0yga")
region = Rect2(36, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhjc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d87u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy1ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dhbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66dsp")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yq2bv"]
atlas = ExtResource("2_vrta5")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_j05jv"]
atlas = ExtResource("2_vrta5")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ryp"]
atlas = ExtResource("2_vrta5")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8m4a"]
atlas = ExtResource("2_vrta5")
region = Rect2(36, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_4krld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq2bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j05jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ryp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8m4a")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d4l7n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="icons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MagicStick" parent="CanvasLayer/icons" instance=ExtResource("5_v6rmk")]
animatedSpiteSpriteFrames = SubResource("SpriteFrames_aadpx")

[node name="MagicFreeze" parent="CanvasLayer/icons" instance=ExtResource("5_v6rmk")]
animatedSpiteSpriteFrames = SubResource("SpriteFrames_uhjc5")

[node name="MagicFire" parent="CanvasLayer/icons" instance=ExtResource("5_v6rmk")]
animatedSpiteSpriteFrames = SubResource("SpriteFrames_4krld")

[connection signal="press" from="CanvasLayer/icons/MagicStick" to="." method="_on_magic_stick_press"]
[connection signal="press" from="CanvasLayer/icons/MagicFreeze" to="." method="_on_magic_freeze_press"]
[connection signal="press" from="CanvasLayer/icons/MagicFire" to="." method="_on_magic_fire_press"]
